// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match a snapshot 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    classname="mock-css."
    disabled="false"
    role="button"
  >
    <mock-styled.div />
    Button
  </mock-styled.button>
</DocumentFragment>
`;

exports[`Button should match icon only button with snapshot 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    aria-label="star"
    classname="mock-css.
  padding: var(--spacing-2);
  , {
    margin: 0 0.125rem;
  }
 mock-css."
    disabled="false"
    role="button"
  >
    <mock-styled.div />
    <mock-styled.div
      fontsize="1rem"
      icon="star"
    />
  </mock-styled.button>
</DocumentFragment>
`;

exports[`Button should match snapshot for <ElAnchorButton> as a link button 1`] = `
<DocumentFragment>
  <mock-styled.a
    classname="mock-css."
    disabled="false"
    href="https://example.com"
    rel="noopener noreferrer"
    role="button"
    target="_blank"
  >
    <mock-styled.div />
    <mock-styled.div
      fontsize="1rem"
      icon="add"
    />
    Button
  </mock-styled.a>
</DocumentFragment>
`;

exports[`Button should match snapshot for <ElAnchorButton> when busy 1`] = `
<DocumentFragment>
  <mock-styled.a
    classname="mock-css. mock-css."
    disabled="false"
    role="button"
  >
    <mock-styled.div />
    Button
  </mock-styled.a>
</DocumentFragment>
`;

exports[`Button should match snapshot for <ElAnchorButton> when disabled 1`] = `
<DocumentFragment>
  <mock-styled.a
    aria-disabled="true"
    aria-label="Add Button"
    classname="mock-css. mock-css."
    disabled="false"
    role="button"
  >
    <mock-styled.div />
    Button
  </mock-styled.a>
</DocumentFragment>
`;

exports[`Button should match snapshot for <ElAnchorButton> with icon only when busy 1`] = `
<DocumentFragment>
  <mock-styled.a
    aria-label="settings"
    classname="mock-css.
  padding: var(--spacing-2);
  , {
    margin: 0 0.125rem;
  }
 mock-css. mock-css."
    disabled="false"
    role="button"
  >
    <mock-styled.div />
    Button
  </mock-styled.a>
</DocumentFragment>
`;

exports[`Button should match variant with snapshot 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    classname="mock-css. mock-css."
    disabled="false"
    role="button"
  >
    <mock-styled.div />
    <mock-styled.div
      fontsize="1rem"
      icon="star"
    />
    Button
    <mock-styled.div
      fontsize="1rem"
      icon="star"
    />
  </mock-styled.button>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup should match a snapshot for align center 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        1
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        2
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        3
      </mock-styled.button>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup should match a snapshot for align left 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        1
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        2
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        3
      </mock-styled.button>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup should match a snapshot for align right 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        1
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        2
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        disabled="false"
        role="button"
      >
        <mock-styled.div />
        3
      </mock-styled.button>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;
